--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
 
 
     <data>
-
+        <variable
+            name="myName"
+            type="com.example.aboutme.MyName" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +23,7 @@
             style="@style/NameStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/name"
+            android:text="@={myName.name}"
             android:textAlignment="center" />
 
         <EditText
@@ -49,6 +51,7 @@
         <TextView
             android:id="@+id/nickname_text"
             style="@style/NameStyle"
+            android:text="@={myName.nickname}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
